--- a/public/themes/bulma/index.twig
+++ b/public/themes/bulma/index.twig
@@ -56,9 +56,7 @@
                     <div class="panel-block">
                         <p class="control has-icons-left">
                             <input class="input" type="text" placeholder="Search">
-                            <span class="icon is-left">
-        <i class="fas fa-search" aria-hidden="true"></i>
-      </span>
+                            <span class="icon is-left"><i class="fas fa-search" aria-hidden="true"></i></span>
                         </p>
                     </div>
                     <p class="panel-tabs">
@@ -69,33 +67,23 @@
                         <a>Forks</a>
                     </p>
                     <a class="panel-block is-active">
-    <span class="panel-icon">
-      <i class="fas fa-book" aria-hidden="true"></i>
-    </span>
+                    <span class="panel-icon"><i class="fas fa-book" aria-hidden="true"></i></span>
                         bulma
                     </a>
                     <a class="panel-block" href="https://github.com/unicate">
-    <span class="panel-icon">
-      <i class="fas fa-book" aria-hidden="true"></i>
-    </span>
+                    <span class="panel-icon"><i class="fas fa-book" aria-hidden="true"></i></span>
                         unicate
                     </a>
                     <a class="panel-block">
-    <span class="panel-icon">
-      <i class="fas fa-book" aria-hidden="true"></i>
-    </span>
+                    <span class="panel-icon"><i class="fas fa-book" aria-hidden="true"></i></span>
                         jgthms.github.io
                     </a>
                     <a class="panel-block">
-    <span class="panel-icon">
-      <i class="fas fa-code-branch" aria-hidden="true"></i>
-    </span>
+                    <span class="panel-icon"><i class="fas fa-code-branch" aria-hidden="true"></i></span>
                         daniellowtw/infboard
                     </a>
                     <a class="panel-block">
-    <span class="panel-icon">
-      <i class="fas fa-code-branch" aria-hidden="true"></i>
-    </span>
+                        <span class="panel-icon"><i class="fas fa-code-branch" aria-hidden="true"></i></span>
                         mojs
                     </a>
                     <label class="panel-block">
