--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -12,4 +12,4 @@ $beige-lighter: #EFF0EB;
 
 
 // https://fontawesome.com/how-to-use/on-the-web/using-with/sass
-$fa-font-path: "./webfonts";
+$fa-font-path: "../font/webfonts";
