--- a/themes/bulma/css/style.css
+++ b/themes/bulma/css/style.css
@@ -6078,8 +6078,8 @@ readers do not read off random characters that represent icons */
   font-style: normal;
   font-weight: 900;
   font-display: block;
-  src: url("./webfonts/fa-solid-900.eot");
-  src: url("./webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("./webfonts/fa-solid-900.woff2") format("woff2"), url("./webfonts/fa-solid-900.woff") format("woff"), url("./webfonts/fa-solid-900.ttf") format("truetype"), url("./webfonts/fa-solid-900.svg#fontawesome") format("svg");
+  src: url("../font/webfonts/fa-solid-900.eot");
+  src: url("../font/webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("../font/webfonts/fa-solid-900.woff2") format("woff2"), url("../font/webfonts/fa-solid-900.woff") format("woff"), url("../font/webfonts/fa-solid-900.ttf") format("truetype"), url("../font/webfonts/fa-solid-900.svg#fontawesome") format("svg");
 }
 .fa,
 .fas {
@@ -6096,8 +6096,8 @@ readers do not read off random characters that represent icons */
   font-style: normal;
   font-weight: 400;
   font-display: block;
-  src: url("./webfonts/fa-brands-400.eot");
-  src: url("./webfonts/fa-brands-400.eot?#iefix") format("embedded-opentype"), url("./webfonts/fa-brands-400.woff2") format("woff2"), url("./webfonts/fa-brands-400.woff") format("woff"), url("./webfonts/fa-brands-400.ttf") format("truetype"), url("./webfonts/fa-brands-400.svg#fontawesome") format("svg");
+  src: url("../font/webfonts/fa-brands-400.eot");
+  src: url("../font/webfonts/fa-brands-400.eot?#iefix") format("embedded-opentype"), url("../font/webfonts/fa-brands-400.woff2") format("woff2"), url("../font/webfonts/fa-brands-400.woff") format("woff"), url("../font/webfonts/fa-brands-400.ttf") format("truetype"), url("../font/webfonts/fa-brands-400.svg#fontawesome") format("svg");
 }
 .fab {
   font-family: "Font Awesome 5 Brands";
